--- a/package.json
+++ b/package.json
@@ -33,23 +33,28 @@
     "@sentry/react": "^9.29.0",
     "@sentry/tracing": "^7.120.3",
     "@sentry/vite-plugin": "^3.5.0",
+    "@stomp/stompjs": "^7.1.1",
     "@tanstack/react-query": "^5.80.7",
-    "@tanstack/react-router": "^1.121.12",
+    "@tanstack/react-router": "^1.121.21",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.10",
+    "ag-grid-community": "^33.3.2",
+    "ag-grid-react": "^33.3.2",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.18.1",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
+    "notistack": "^3.0.2",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.58.0",
-    "react-hot-toast": "^2.5.2",
+    "sockjs-client": "^1.6.1",
     "zod": "^3.25.64",
     "zustand": "^5.0.5"
   },
@@ -59,7 +64,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/react-query-devtools": "^5.80.7",
-    "@tanstack/router-devtools": "^1.121.12",
+    "@tanstack/react-router-devtools": "^1.121.21",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -68,6 +73,7 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/sockjs-client": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitejs/plugin-react": "^4.5.2",
