--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,17 +4,20 @@ FROM node:20-alpine
 # Instalar dependências do sistema
 RUN apk add --no-cache git curl
 
+# Instalar pnpm globalmente
+RUN npm install -g pnpm
+
 # Definir diretório de trabalho
 WORKDIR /app
 
-# Copiar arquivos de dependências
-COPY package*.json ./
+# Copiar arquivos de dependências (pnpm usa pnpm-lock.yaml)
+COPY package*.json pnpm-lock.yaml ./
 
 # Instalar todas as dependências (incluindo devDependencies)
-RUN npm ci
+RUN pnpm install --frozen-lockfile
 
 # Expor porta do Vite
 EXPOSE 5173
 
 # Comando para desenvolvimento
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"] 
+CMD ["pnpm", "dev", "--host", "0.0.0.0"] 
