--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/benchmark": "^2.1.5",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.0.3",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
